--- a/config/cms.yaml
+++ b/config/cms.yaml
@@ -22,7 +22,7 @@
 #   3. 生产环境（pnpm build）：不会注入编辑按钮
 # -----------------------------------------------------------------------------
 enabled: true # 是否启用本地 CMS 功能（仅开发环境）
-localProjectPath: '/Users/yourname/Documents/Programming/me/astro-koharu' # 本地项目（绝对路径） 例如: '/Users/yourname/path/to/astro-koharu'
+localProjectPath: '/Code/html code/astro-koharu-mod' # 本地项目（绝对路径） 例如: '/Users/yourname/path/to/astro-koharu'
 contentRelativePath: 'src/content/blog' # 博客内容目录
 editors:
   - id: vscode
