--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "ink": "^6.6.0",
     "knip": "^5.71.0",
     "lint-staged": "^15.5.2",
+    "mdast-util-directive": "^3.1.0",
     "pinyin-pro": "^3.28.0",
     "remark": "^15.0.1",
     "rollup-plugin-visualizer": "^6.0.5",
