--- a/package.json
+++ b/package.json
@@ -102,6 +102,17 @@
     "@astrojs/check": "^0.9.6",
     "@biomejs/biome": "^2.3.10",
     "@huggingface/transformers": "^3.8.1",
+    "@iconify-json/fa7-brands": "^1.2.1",
+    "@iconify-json/fa7-regular": "^1.2.2",
+    "@iconify-json/fa7-solid": "^1.2.3",
+    "@iconify-json/line-md": "^1.2.14",
+    "@iconify-json/lucide": "^1.2.87",
+    "@iconify-json/material-symbols": "^1.2.53",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/ph": "^1.2.2",
+    "@iconify-json/proicons": "^1.2.19",
+    "@iconify-json/simple-icons": "^1.2.68",
+    "@iconify-json/tabler": "^1.2.26",
     "@iconify/react": "^5.2.1",
     "@inkjs/ui": "^2.0.0",
     "@lint-md/cli": "^2.0.0",
