--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # build output
 dist/
+.sonda/
 
 # generated types
 .astro/
 
 # dependencies
-node_modules/
+node_modules
 
 # logs
 npm-debug.log*
@@ -17,6 +18,9 @@ pnpm-debug.log*
 .env
 .env.production
 .env*.local
+
+# Cloudflare
+.wrangler/
 
 # vercel
 .vercel
