--- a/config/site.yaml
+++ b/config/site.yaml
@@ -576,3 +576,54 @@ christmas:
   #   maxIterations: 8 # 最大迭代次数
   #   mobileMaxLayers: 4 # 移动端最大层数
   #   mobileMaxIterations: 6 # 移动端最大迭代次数
+
+# =============================================================================
+# SEO Configuration
+# =============================================================================
+# https://github.com/alextim/astro-lib/tree/main/packages/astro-robots-txt#readme
+# robots: robots.txt 配置 (由 astro-robots-txt 自动生成)
+#   policy: 爬虫策略数组（可选，默认允许所有）
+#     - userAgent: 爬虫名称，'*' 表示所有
+#       allow: 允许路径（可为字符串或数组）
+#       disallow: 禁止路径（可为字符串或数组）
+#   host: 是否添加 Host 指令（可选，适用于 Yandex）
+# -----------------------------------------------------------------------------
+seo:
+  robots:
+    # policy:                          # 爬虫策略（可选，取消注释并配置）
+    #   - userAgent: '*'
+    #     allow: '/'
+    #     disallow:
+    #       - '/api/'
+    # host: true                       # 可选：添加 Host 指令（Yandex）
+
+# =============================================================================
+# Development Tools (Dev Only)
+# 开发工具配置 - 仅在开发环境（pnpm dev）生效
+# =============================================================================
+# 配置后，开发环境下文章页会显示编辑按钮，可快速打开本地编辑器
+# 字段说明：
+#   localProjectPath: 本地项目的绝对路径（用于生成文件完整路径）
+#   contentRelativePath: 博客内容相对于项目根目录的路径（默认: 'src/content/blog'）
+#   editors: 编辑器列表
+#     - id: 编辑器唯一标识符
+#     - name: 编辑器显示名称
+#     - icon: Iconify 图标标识（可从 https://icon-sets.iconify.design/ 中搜寻）
+#     - urlTemplate: URL 模板，支持占位符 {path}（文件绝对路径）
+# -----------------------------------------------------------------------------
+dev:
+  localProjectPath: '/Code/html code/astro-koharu-mod' # 请修改为你的项目绝对路径
+  contentRelativePath: 'src/content/blog'
+  editors:
+    - id: vscode
+      name: VS Code
+      icon: devicon-plain:vscode
+      urlTemplate: 'vscode://file{path}'
+    - id: cursor
+      name: Cursor
+      icon: simple-icons:cursor
+      urlTemplate: 'cursor://file{path}'
+    - id: zed
+      name: Zed
+      icon: simple-icons:zedindustries
+      urlTemplate: 'zed://file{path}'
