--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-koharu",
   "type": "module",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "scripts": {
     "dev": "astro dev",
     "generate:lqips": "npx tsx src/scripts/generateLqips.ts",
@@ -25,16 +25,15 @@
     "change": "git cliff --bump -o CHANGELOG.md",
     "prepare": "husky",
     "knip": "knip",
-    "koharu": "npx tsx scripts/koharu.tsx"
+    "koharu": "npx tsx scripts/koharu.tsx",
+    "cms": "cd cms && pnpm dev",
+    "cms:install": "cd cms && pnpm install"
   },
   "dependencies": {
     "@antv/infographic": "^0.2.4",
-    "@astrojs/cloudflare": "^12.6.12",
-    "@astrojs/netlify": "^6.6.4",
-    "@astrojs/node": "^9.5.2",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.14",
-    "@astrojs/vercel": "^9.0.4",
+    "@astrojs/sitemap": "^3.7.0",
     "@blocknote/core": "^0.46.1",
     "@blocknote/react": "^0.46.1",
     "@blocknote/shadcn": "^0.46.1",
@@ -61,6 +60,8 @@
     "astro-loading-indicator": "^0.7.1",
     "astro-mermaid": "^1.2.0",
     "astro-pagefind": "^1.8.5",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^1.1.0",
     "astro-tooltips": "^0.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -91,6 +92,7 @@
     "rehype-slug": "^6.0.0",
     "remark-directive": "^4.0.0",
     "sanitize-html": "^2.17.0",
+    "sonda": "^0.10.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.17",
@@ -137,7 +139,6 @@
     "mdast-util-directive": "^3.1.0",
     "pinyin-pro": "^3.28.0",
     "remark": "^15.0.1",
-    "rollup-plugin-visualizer": "^6.0.5",
     "sharp": "^0.34.5",
     "strip-markdown": "^6.0.0",
     "tsx": "^4.21.0",
